Bug 83518 - LO calc will hang on amd kaveri when opening a document.
Summary: LO calc will hang on amd kaveri when opening a document.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on: 83716
Blocks: 81107
  Show dependency treegraph
 
Reported: 2014-09-05 06:50 UTC by xukai
Modified: 2015-04-09 11:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
This is the screenshot. (161.23 KB, image/png)
2014-09-05 06:50 UTC, xukai
Details
The document i want to open (2.36 MB, application/zip)
2014-09-05 08:18 UTC, xukai
Details
It also hangs when i create a new document then add a GL3d bar chart (170.96 KB, image/png)
2014-09-05 09:22 UTC, xukai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description xukai 2014-09-05 06:50:31 UTC
Created attachment 105781 [details]
This is the screenshot.
Comment 1 xukai 2014-09-05 08:18:47 UTC
Created attachment 105787 [details]
The document i want to open
Comment 2 xukai 2014-09-05 09:22:18 UTC
Created attachment 105791 [details]
It also hangs when i create a new document then add a GL3d bar chart
Comment 3 Jan Holesovsky 2014-09-10 12:44:49 UTC
Xukai: Can you please attach the debugger to LibreOffice, break it, and provide the stack trace here?  I'd be most interested to see where it hangs.

Thank you!
Comment 4 Michael Meeks 2014-09-10 14:48:05 UTC
This could well be bug#83716 - a side-effect of the unexpected threaded rendering feature :-) there is a deadlock there at least. I can't confirm the problem on load though.
Comment 5 Michael Meeks 2014-09-10 16:02:01 UTC
Fixed the deadlock in fdo#83716 - but that can't be triggered on load - you'd have to drag/spin/drop/interact with the data there. So really - more details on what stack trace you get here are -much- appreciated.

When you say 'hang' is re-rendering frozen ? is the app un-responsive to input ? or is the 'Play' macro/button just not working or ? ...
Comment 6 xukai 2014-09-12 02:04:20 UTC
Through the investigation we found that: the opengl context will be lost when executing function "UpdateScreenText" of file:GL3DBarChart.cxx,class:RenderBenchMarkThread,function:execute, this caused the LO calc hang.
This issue doesn't exist when we commit our last batch file "155f0b84c18f258ca0a7c94c7d605333c55a2aae". There are must be some modification after we commit this batch.

> Xukai: Can you please attach the debugger to LibreOffice, break it, and
> provide the stack trace here?  I'd be most interested to see where it hangs.
> 
> Thank you!
Comment 7 Jan Holesovsky 2014-09-12 13:50:08 UTC
If by a 'hang' you mean that the entire LibreOffice becomes
unresponsive, then I have to say that I am unable to reproduce it,
unfortunately.

The only thing I was able to see was that the demo itself was not
updating unless you've pointed the mouse pointer over the GL chart; I
have fixed it now, please update master, and make sure you have the
commit 1eb4a0472a02beee0a473127e1ee84381b8c230e .

If the problem persists, please provide the backtrace as outlined in the
bug, so that we can at least guess why I am not able to reproduce it.

And also as detailed steps to reproduce it as possible would be most appreciated too.

Thank you!
Comment 8 Michael Meeks 2014-09-15 15:09:37 UTC
Assuming the hang was bug#83716 - which we fixed last week -> closing this one.
Comment 9 Jan Holesovsky 2014-09-16 10:11:08 UTC
The important missing info here was that this happens only when you have export BENCHMARK_MODE=1
Comment 10 Commit Notification 2014-09-16 10:17:34 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d9d7ed9eccb1b887e6e0f84a33ffac0438aecd9

fdo#83518: We need the GL context when rendering text.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jan Holesovsky 2014-09-16 10:20:19 UTC
Closing again.