fdo#83518: We need the GL context when rendering text.

Change-Id: I5e14dbb4f74000fe49aae9d864fa69266c131d53